Added filter on incomming items

--- a/viewer/Views/Home/Index.cshtml
+++ b/viewer/Views/Home/Index.cshtml
@@ -97,6 +97,8 @@
 
             $("#grid-events").show();
             $('#grid-event-details').prepend(html);
+            
+            filerExistingItems();
         }
 
         var initialize = function () {
